fixing prescription list size on tablet

--- a/omod/src/main/compass/sass/tablet-style/list.scss
+++ b/omod/src/main/compass/sass/tablet-style/list.scss
@@ -19,6 +19,10 @@ ul.list-items {
 		}
 	}
 
+	.left {
+		width: 70%;
+	}
+
 	em {
 		padding: 0;
 		font-size: 0.9em;
